Commit app component

--- a/01-hola-mundo/src/app/components/footer/footer.component.html
+++ b/01-hola-mundo/src/app/components/footer/footer.component.html
@@ -1,1 +1,8 @@
-<p>footer works!</p>
+<footer class="footer bg-dark text-center">
+
+<div>
+    <p>
+        &copy; {{anio}} Angel Abrahamsn 2020
+    </p>
+</div>
+</footer>
