--- a/01-hola-mundo/src/app/app.component.html
+++ b/01-hola-mundo/src/app/app.component.html
@@ -1,8 +1,6 @@
 <app-header></app-header>
+<div class="container m-5">
+    <app-body ></app-body>
 
-<app-body></app-body>
-<ul>
-  <li>Nombre: {{nombre}}</li>
-  <li>Apellido: {{apellido}}</li>
-
-</ul>
+</div>
+<app-footer></app-footer>
