--- a/02-spa/src/app/components/about/about.component.html
+++ b/02-spa/src/app/components/about/about.component.html
@@ -1,1 +1,4 @@
-<p>about works!</p>
+<h1 class="animated fadeIn fast">Sobre comics app</h1>
+<p class="animated faseIn fast">
+Un parrafo cualquiera.
+</p>
