Commit routerlink and heroes

--- a/02-spa/src/styles.css
+++ b/02-spa/src/styles.css
@@ -1,7 +1,9 @@
 body{
   padding-bottom: 50px;
 }
-
+.img-logo{
+  width: 150px;
+}
 .animated {
     -webkit-animation-duration: 1s;
     animation-duration: 1s;
