--- a/02-spa/src/app/components/shared/navbar/navbar.component.html
+++ b/02-spa/src/app/components/shared/navbar/navbar.component.html
@@ -25,8 +25,9 @@
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+      <!-- <input #buscarTexto class="form-control mr-sm-2" type="text" placeholder="Buscar heroe" (keyup.enter)="buscarHeroe(buscarTexto.value)"  > -->
+      <input #buscarTexto class="form-control mr-sm-2" type="search" placeholder="Buscar pirata" (keyup.enter)="buscarHeroe(buscarTexto.value)">
+      <button (click)="buscarHeroe(buscarTexto.value)" class="btn btn-outline-primary my-2 my-sm-0" type="button">Buscar</button>
     </form>
   </div>
 </nav>
